[package]
name = "cerberus-mergeguard"
version = "0.1.0"
authors = ["Heathcliff <heathcliff@heathcliff.eu"]
edition = "2024"
description = "Block github pull request merges until all status checks have passed"
readme = "README.md"
repository = "https://github.com/heathcliff26/cerberus-mergeguard"
license = "Apache-2.0"
categories =["command-line-utilities"]
exclude = [
    ".github",
    ".vscode",
    "hack",
    "images",
    ".editorconfig",
    ".sourcery.yaml",
    "Makefile",
]

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.39", features = ["derive"] }
hmac = "0.12.1"
jsonwebtoken = { version = "9.3.1", features = ["use_pem"] }
reqwest = { version = "0.12.18", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tokio = { version = "1.45.1", features = ["full"] }
tokio-native-tls = "0.3.1"
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rand = { version = "0.9.1", optional = true }

[profile.release]
strip = "symbols"
lto = true

[features]
default = []
e2e = ["dep:rand"]

[dev-dependencies]
rand = "0.9.1"
