[package]
name = "cerberus-mergeguard"
version = "0.3.7"
authors = ["Heathcliff <heathcliff@heathcliff.eu>"]
edition = "2024"
description = "Block github pull request merges until all status checks have passed"
readme = "README.md"
repository = "https://github.com/heathcliff26/cerberus-mergeguard"
license = "Apache-2.0"
categories = ["command-line-utilities"]
exclude = [
    ".github",
    ".vscode",
    "hack",
    "images",
    ".editorconfig",
    ".sourcery.yaml",
    "Makefile",
]

[dependencies]
axum = { version = "0.8.6", default-features = false, features = [
    "http2",
    "json",
    "tokio",
    "tracing",
] }
clap = { version = "4.5.51", features = ["derive"] }
hmac = "0.12.1"
jsonwebtoken = { version = "10.1.0", features = ["aws_lc_rs", "use_pem"] }
reqwest = { version = "0.12.24", default-features = false, features = [
    "http2",
    "default-tls",
    "json",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "net",
    "macros",
    "sync",
    "signal",
] }
tokio-native-tls = "0.3.1"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = { version = "0.1.41", features = [
    "max_level_debug",
    "release_max_level_debug",
] }
tracing-subscriber = "0.3.20"
rand = { version = "0.9.2", optional = true }
chrono = { version = "0.4.42", default-features = false, features = [
    "std",
    "serde",
    "now",
] }

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1

[features]
default = []
e2e = ["dep:rand"]

[dev-dependencies]
rand = "0.9.2"
tempfile = "3.23.0"
